update banner & RA

--- a/src/app/reg-admin/voter-management/voter-management.component.html
+++ b/src/app/reg-admin/voter-management/voter-management.component.html
@@ -1,9 +1,9 @@
 <div class="voter-management row">
     <div class="col">
-        <div class="header">
+        <!-- <div class="header">
             <p>Voter Management</p>
             <hr>
-        </div>
+        </div> -->
         <div class="content">
 
             <div class="user-profile row">
