--- a/src/app/shared/nav/navbar.component.scss
+++ b/src/app/shared/nav/navbar.component.scss
@@ -4,7 +4,7 @@
     overflow: visible;
     width: 250px;
     position: fixed;
-    top: 65px;
+    top: 0;
     left: 0;
     height: 100vh;
     z-index: 999;
