--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,19 +1,9 @@
 <div class="banner"></div>
-<nav class="navbar navbar-expand-lg navbar-light custom-nav fixed-top">
-    <!-- <button class="hamburger" (click)="toggleSidebar()" mat-button>
-        <i class="material-icons">menu</i>
-    </button> -->
+<!-- <nav class="navbar navbar-expand-lg navbar-light custom-nav fixed-top">
     <a class="navbar-brand text-color">
         <img src="../../../assets/brand/votereum_full.png" width="137px" height="50px" class="d-inline-block align-top" alt="">
-        <!-- <span class="fancy-font">{{brandName}}</span> -->
     </a>
     
     <ul class="navbar-nav text-color">
-        <!-- <li class="nav-item">
-            <a class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link">Fake top nav</a>
-        </li> -->
     </ul>
-</nav>
+</nav> -->
