update login page

--- a/src/app/home/score-board/score-board.component.html
+++ b/src/app/home/score-board/score-board.component.html
@@ -1,6 +1,7 @@
-<div class="container-fluid wrapper score-grid no-gutters">
+<div class="container-fluid wrapper score-grid no-gutters justify-content-center">
     <ngx-charts-bar-vertical *ngIf="!isGettingData"
         [scheme]="colorScheme"
+        [view]="view"
         [results]="result"
         [gradient]="gradient"
         [xAxis]="showXAxis"
